--- a/main.css
+++ b/main.css
@@ -8,13 +8,11 @@
   display: contents;
 } */
 
-#display {
-  /* color: white;
-   */
-  /* display: none; */
-}
-
 .guessBox {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px solid red;
   width: 4rem;
   height: 4rem;
@@ -23,4 +21,5 @@
 
 .container {
   display: flex;
+  justify-content: center;
 }
